app/base/dc-app.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: rails-pgsql-persistent
  namespace: gokhantst
  labels:
    app: rails-pgsql-persistent-storageclass
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
      pre:
        failurePolicy: Abort
        execNewPod:
          command:
            - ./migrate-database.sh
          containerName: rails-pgsql-persistent
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - rails-pgsql-persistent
        from:
          kind: ImageStreamTag
          namespace: gokhantst
          name: 'rails-pgsql-persistent:latest'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    name: rails-pgsql-persistent
  template:
    metadata:
      name: rails-pgsql-persistent
      creationTimestamp: null
      labels:
        name: rails-pgsql-persistent
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /articles
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: rails-pgsql-persistent
          livenessProbe:
            httpGet:
              path: /articles
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/gokhantst/rails-pgsql-persistent@sha256:91e165341e2317cce9dd72167ead3c4b2237e4c39c9caa72ccfc919187db2d41
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
