app/base/svc-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
  namespace: gokhantst
  labels:
    app: rails-pgsql-persistent-storageclass
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: postgresql
  type: ClusterIP
  sessionAffinity: None
