app/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rails-pgsql-persistent
  namespace: gokhantst
  labels:
    app: rails-pgsql-persistent-storageclass
spec:
  to:
    kind: Service
    name: rails-pgsql-persistent
    weight: 100
  wildcardPolicy: None
